Carrusel Amazon: srcset+sizes y fallback SVG por categoría (retina + robusto)

--- a/index.html
+++ b/index.html
@@ -1501,7 +1501,13 @@
         <!-- 3 cards (duplicadas para loop suave) -->
         <div class="ejemplo-card">
           <div class="ejemplo-card-image" role="img" aria-label="Productos tecnológicos">
-            <img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?technology" alt="Vista de producto tecnológico" />
+              <img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900"
+                class="ejemplo-card-img"
+                src="https://source.unsplash.com/1600x900/?technology"
+                srcset="https://source.unsplash.com/800x450/?technology 800w, https://source.unsplash.com/1200x675/?technology 1200w, https://source.unsplash.com/1600x900/?technology 1600w"
+                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                onerror="this.onerror=null;this.src='screenshots/template-tech.svg'"
+                alt="Vista de producto tecnológico" />
           </div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Electrónica</p>
@@ -1513,7 +1519,13 @@
 
         <div class="ejemplo-card">
           <div class="ejemplo-card-image" role="img" aria-label="Productos de lujo">
-            <img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?luxury" alt="Detalle de producto premium" />
+              <img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900"
+                class="ejemplo-card-img"
+                src="https://source.unsplash.com/1600x900/?luxury"
+                srcset="https://source.unsplash.com/800x450/?luxury 800w, https://source.unsplash.com/1200x675/?luxury 1200w, https://source.unsplash.com/1600x900/?luxury 1600w"
+                sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
+                onerror="this.onerror=null;this.src='screenshots/template-premium.svg'"
+                alt="Detalle de producto premium" />
           </div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Premium</p>
@@ -1524,7 +1536,7 @@
         </div>
 
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Productos eco"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?eco,green" alt="Producto ecológico con naturaleza" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Productos eco"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?eco,green" srcset="https://source.unsplash.com/800x450/?eco,green 800w, https://source.unsplash.com/1200x675/?eco,green 1200w, https://source.unsplash.com/1600x900/?eco,green 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/template-eco.svg'" alt="Producto ecológico con naturaleza" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Sustentable</p>
             <h3>Eco-Friendly</h3>
@@ -1535,7 +1547,7 @@
 
         <!-- Duplicados -->
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Productos tecnológicos"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?technology" alt="Vista de producto tecnológico" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Productos tecnológicos"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?technology" srcset="https://source.unsplash.com/800x450/?technology 800w, https://source.unsplash.com/1200x675/?technology 1200w, https://source.unsplash.com/1600x900/?technology 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/template-tech.svg'" alt="Vista de producto tecnológico" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Electrónica</p>
             <h3>Tech Products</h3>
@@ -1544,7 +1556,7 @@
           </div>
         </div>
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Productos de lujo"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?luxury" alt="Detalle de producto premium" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Productos de lujo"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?luxury" srcset="https://source.unsplash.com/800x450/?luxury 800w, https://source.unsplash.com/1200x675/?luxury 1200w, https://source.unsplash.com/1600x900/?luxury 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/template-premium.svg'" alt="Detalle de producto premium" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Premium</p>
             <h3>Productos de Lujo</h3>
@@ -1553,7 +1565,7 @@
           </div>
         </div>
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Productos eco"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?eco,green" alt="Producto ecológico con naturaleza" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Productos eco"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?eco,green" srcset="https://source.unsplash.com/800x450/?eco,green 800w, https://source.unsplash.com/1200x675/?eco,green 1200w, https://source.unsplash.com/1600x900/?eco,green 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/template-eco.svg'" alt="Producto ecológico con naturaleza" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Sustentable</p>
             <h3>Eco-Friendly</h3>
@@ -1567,7 +1579,7 @@
       <div class="ejemplos-row ejemplos-row-bottom">
         <!-- 3 cards (duplicadas para loop suave) -->
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Artículos deportivos"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?sports" alt="Equipamiento deportivo" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Artículos deportivos"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?sports" srcset="https://source.unsplash.com/800x450/?sports 800w, https://source.unsplash.com/1200x675/?sports 1200w, https://source.unsplash.com/1600x900/?sports 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/template-sport.svg'" alt="Equipamiento deportivo" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Deportivo</p>
             <h3>Artículos Deportivos</h3>
@@ -1577,7 +1589,7 @@
         </div>
 
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Reseñas y calificaciones"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?reviews,ratings" alt="Testimonios y valoraciones" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Reseñas y calificaciones"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?reviews,ratings" srcset="https://source.unsplash.com/800x450/?reviews,ratings 800w, https://source.unsplash.com/1200x675/?reviews,ratings 1200w, https://source.unsplash.com/1600x900/?reviews,ratings 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/estilo-social-proof.svg'" alt="Testimonios y valoraciones" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Estrategia</p>
             <h3>Social Proof</h3>
@@ -1587,7 +1599,7 @@
         </div>
 
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Analítica y datos"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?analytics,data" alt="Gráficos y métricas" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Analítica y datos"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?analytics,data" srcset="https://source.unsplash.com/800x450/?analytics,data 800w, https://source.unsplash.com/1200x675/?analytics,data 1200w, https://source.unsplash.com/1600x900/?analytics,data 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/estilo-data-driven.svg'" alt="Gráficos y métricas" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Data-Driven</p>
             <h3>Estadísticas y Datos</h3>
@@ -1598,7 +1610,7 @@
 
         <!-- Duplicados -->
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Artículos deportivos"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?sports" alt="Equipamiento deportivo" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Artículos deportivos"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?sports" srcset="https://source.unsplash.com/800x450/?sports 800w, https://source.unsplash.com/1200x675/?sports 1200w, https://source.unsplash.com/1600x900/?sports 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/template-sport.svg'" alt="Equipamiento deportivo" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Deportivo</p>
             <h3>Artículos Deportivos</h3>
@@ -1607,7 +1619,7 @@
           </div>
         </div>
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Reseñas y calificaciones"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?reviews,ratings" alt="Testimonios y valoraciones" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Reseñas y calificaciones"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?reviews,ratings" srcset="https://source.unsplash.com/800x450/?reviews,ratings 800w, https://source.unsplash.com/1200x675/?reviews,ratings 1200w, https://source.unsplash.com/1600x900/?reviews,ratings 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/estilo-social-proof.svg'" alt="Testimonios y valoraciones" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Estrategia</p>
             <h3>Social Proof</h3>
@@ -1616,7 +1628,7 @@
           </div>
         </div>
         <div class="ejemplo-card">
-          <div class="ejemplo-card-image" role="img" aria-label="Analítica y datos"><img loading="lazy" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?analytics,data" alt="Gráficos y métricas" /></div>
+          <div class="ejemplo-card-image" role="img" aria-label="Analítica y datos"><img loading="lazy" decoding="async" fetchpriority="low" referrerpolicy="no-referrer" width="1600" height="900" class="ejemplo-card-img" src="https://source.unsplash.com/1600x900/?analytics,data" srcset="https://source.unsplash.com/800x450/?analytics,data 800w, https://source.unsplash.com/1200x675/?analytics,data 1200w, https://source.unsplash.com/1600x900/?analytics,data 1600w" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw" onerror="this.onerror=null;this.src='screenshots/estilo-data-driven.svg'" alt="Gráficos y métricas" /></div>
           <div class="ejemplo-card-body">
             <p class="ejemplo-card-category">Data-Driven</p>
             <h3>Estadísticas y Datos</h3>
