--- a/index.html
+++ b/index.html
@@ -23,17 +23,66 @@
     .nav-cta { background: #000; color: #fff; padding: 10px 24px; border-radius: 8px; transition: all 0.3s; }
     .nav-cta:hover { background: #333; transform: scale(1.05); }
 
-    .hero { padding-top: 140px; padding-bottom: 80px; background: linear-gradient(135deg, #ffffff 0%, #f9f9f9 100%); overflow: visible; }
-    .hero-content { max-width: 1400px; margin: 0 auto; padding: 0 40px; display: grid; grid-template-columns: 1fr 1fr; gap: 60px; align-items: center; }
-    .hero-text { text-align: left; }
-    .hero h1 { font-size: 4rem; line-height: 1.2; margin-bottom: 24px; font-weight: 800; color: #000; }
-    .hero p { font-size: 1.15rem; color: #666; margin-bottom: 40px; line-height: 1.7; }
-    .hero-buttons { display: flex; gap: 16px; flex-wrap: wrap; }
-    .btn { padding: 14px 32px; border-radius: 8px; font-weight: 600; transition: all 0.3s; border: none; cursor: pointer; font-size: 1rem; }
-    .btn-primary { background: #000; color: #fff; }
-    .btn-primary:hover { background: #333; transform: translateY(-2px); box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15); }
-    .btn-secondary { background: transparent; color: #000; border: 2px solid #000; }
-    .btn-secondary:hover { background: #000; color: #fff; }
+    .hero {
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #0f0f12;
+  padding: 0 24px;
+}
+
+.hero-content {
+  max-width: 720px;
+  text-align: center;
+}
+
+.hero h1 {
+  font-size: clamp(2.5rem, 5vw, 3.6rem);
+  line-height: 1.1;
+  font-weight: 700;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.hero p {
+  font-size: 1.05rem;
+  line-height: 1.6;
+  color: #b8b8c2;
+  margin-bottom: 36px;
+}
+
+.hero-cta {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 14px;
+}
+
+.btn-primary {
+  padding: 16px 42px;
+  border-radius: 16px;
+  background: #141418;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 600;
+  box-shadow:
+    8px 8px 16px rgba(0, 0, 0, 0.6),
+    -8px -8px 16px rgba(255, 255, 255, 0.04);
+  transition: all 0.2s ease;
+}
+
+.btn-primary:hover {
+  transform: translateY(-2px);
+  box-shadow:
+    12px 12px 20px rgba(0, 0, 0, 0.7),
+    -12px -12px 20px rgba(255, 255, 255, 0.05);
+}
+
+.hero-note {
+  font-size: 0.85rem;
+  color: #8e8e98;
+}
 
     /* CAROUSEL 3D - ESFERA REAL */
     /* ========================================
@@ -1198,14 +1247,29 @@
 
 <section class="hero">
   <div class="hero-content">
-    <div class="hero-text">
-      <h1>Diseño de Productos que Generan Resultados</h1>
-      <p>UX/UI design, product strategy y análisis de datos. Transformamos desafíos en oportunidades de crecimiento.</p>
-      <div class="hero-buttons">
-        <button class="btn btn-primary">Ver Proyectos</button>
-        <button class="btn btn-secondary">Agendar Llamada</button>
-      </div>
+    <h1>
+      Plantillas UX/UI<br />
+      listas para vender<br />
+      desde el día uno
+    </h1>
+
+    <p>
+      Diseños premium probados en productos reales.
+      Implementá rápido, reducí fricción y aumentá conversión
+      sin reinventar la rueda.
+    </p>
+
+    <div class="hero-cta">
+      <a href="#pricing" class="btn-primary">
+        Ver plantillas
+      </a>
+      <span class="hero-note">
+        Acceso inmediato · Uso comercial incluido
+      </span>
     </div>
+  </div>
+</section>
+
 
     <!-- Carrusel 3D Coverflow Premium -->
     <div class="hero-carousel">
