--- a/index.html
+++ b/index.html
@@ -23,66 +23,53 @@
     .nav-cta { background: #000; color: #fff; padding: 10px 24px; border-radius: 8px; transition: all 0.3s; }
     .nav-cta:hover { background: #333; transform: scale(1.05); }
 
-    .hero {
-  min-height: 90vh;
+    .hero-silent {
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #0f0f12;
+  background: #0b0b0d;
   padding: 0 24px;
 }
 
-.hero-content {
-  max-width: 720px;
+.hero-silent__content {
+  max-width: 640px;
   text-align: center;
 }
 
-.hero h1 {
-  font-size: clamp(2.5rem, 5vw, 3.6rem);
-  line-height: 1.1;
-  font-weight: 700;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-
-.hero p {
-  font-size: 1.05rem;
-  line-height: 1.6;
-  color: #b8b8c2;
-  margin-bottom: 36px;
-}
-
-.hero-cta {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 14px;
-}
-
-.btn-primary {
-  padding: 16px 42px;
-  border-radius: 16px;
-  background: #141418;
-  color: #ffffff;
-  text-decoration: none;
+.hero-silent h1 {
+  font-size: clamp(2.4rem, 4.5vw, 3.2rem);
   font-weight: 600;
-  box-shadow:
-    8px 8px 16px rgba(0, 0, 0, 0.6),
-    -8px -8px 16px rgba(255, 255, 255, 0.04);
-  transition: all 0.2s ease;
+  line-height: 1.15;
+  letter-spacing: -0.02em;
+  color: #ffffff;
+  margin-bottom: 24px;
 }
 
-.btn-primary:hover {
-  transform: translateY(-2px);
-  box-shadow:
-    12px 12px 20px rgba(0, 0, 0, 0.7),
-    -12px -12px 20px rgba(255, 255, 255, 0.05);
+.hero-silent p {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #9a9aa3;
+  margin-bottom: 48px;
 }
 
-.hero-note {
-  font-size: 0.85rem;
-  color: #8e8e98;
+.btn-silent {
+  display: inline-block;
+  padding: 14px 36px;
+  border-radius: 999px;
+  background: #ffffff;
+  color: #0b0b0d;
+  font-size: 0.95rem;
+  font-weight: 500;
+  text-decoration: none;
+  transition: transform 0.2s ease, opacity 0.2s ease;
 }
+
+.btn-silent:hover {
+  transform: translateY(-1px);
+  opacity: 0.9;
+}
+
 
     /* CAROUSEL 3D - ESFERA REAL */
     /* ========================================
@@ -1245,30 +1232,21 @@
   </div>
 </nav>
 
-<section class="hero">
-  <div class="hero-content">
-    <h1>
-      Plantillas UX/UI<br />
-      listas para vender<br />
-      desde el día uno
-    </h1>
+<section class="hero-silent">
+  <div class="hero-silent__content">
+    <h1>Diseño UX/UI<br>pensado para escalar</h1>
 
     <p>
-      Diseños premium probados en productos reales.
-      Implementá rápido, reducí fricción y aumentá conversión
-      sin reinventar la rueda.
+      Plantillas premium creadas con criterio de producto.
+      Claridad, foco y decisiones bien tomadas desde el inicio.
     </p>
 
-    <div class="hero-cta">
-      <a href="#pricing" class="btn-primary">
-        Ver plantillas
-      </a>
-      <span class="hero-note">
-        Acceso inmediato · Uso comercial incluido
-      </span>
-    </div>
+    <a href="#pricing" class="btn-silent">
+      Acceder
+    </a>
   </div>
 </section>
+
 
 
     <!-- Carrusel 3D Coverflow Premium -->
