Refactor CTA section and add new call-to-action link

--- a/index.html
+++ b/index.html
@@ -1485,14 +1485,31 @@
   </div>
 </section>
 
-<section class="cta" style="background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%); padding: 100px 40px;">
-  <h2 style="color: #fff; margin-bottom: 24px;">¿Tiene un diseño para codificar?</h2>
-  <p style="color: rgba(255,255,255,0.9); font-size: 1.1rem; margin-bottom: 40px; max-width: 600px; margin-left: auto; margin-right: auto;">Transformamos tus diseños en código limpio y funcional. Desde Figma hasta producción.</p>
-  <div class="cta-buttons">
-    <a href="contact.html" style="background: #fff; color: #FF6B35; padding: 14px 32px; border-radius: 8px; font-weight: 600; text-decoration: none; transition: all 0.3s; display: inline-block;">Empezar</a>
-    <a href="https://wa.me/543525300076?text=Hola%20David,%20me%20gustaría%20agendar%20una%20llamada%20para%20hablar%20sobre%20un%20proyecto%20de%20diseño." style="background: transparent; color: #fff; border: 2px solid #fff; padding: 14px 32px; border-radius: 8px; font-weight: 600; text-decoration: none; transition: all 0.3s; display: inline-block;" target="_blank">Reservar una llamada</a>
-  </div>
-</section>
+<div class="section-cta">
+  <a href="#examples" class="btn-silent-outline">
+    Ver cómo se ve en productos reales
+  </a>
+</div>
+
+  .section-cta {
+  margin-top: 64px;
+  text-align: center;
+}
+
+.btn-silent-outline {
+  padding: 14px 34px;
+  border-radius: 999px;
+  border: 1px solid rgba(255,255,255,0.25);
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 0.9rem;
+  transition: all 0.2s ease;
+}
+
+.btn-silent-outline:hover {
+  background: rgba(255,255,255,0.06);
+}
+
 
 <section class="process" id="proceso">
   <div class="section-title">
