Update hero section heading in index.html

--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,7 @@
 <!-- Hero Section - Glassmorphism Style -->
 <section class="hero-glass">
   <div class="hero-content-glass">
-    <h1>3D <span>GLASSMORPHISM</span> LANDING PAGE</h1>
+    <h1>Diseño UX/UI<br>pensado para escalar</h1>
     
     <p>
       Diseño UX/UI premium con efecto vidrio. Interfaces modernas, elegantes y funcionales 
