Enhance hero section with glass effects
Added glass spheres and rings to hero section for design enhancement.

--- a/index.html
+++ b/index.html
@@ -1733,6 +1733,20 @@ body {
 
 <!-- Carrusel 3D Coverflow Premium -->
 <div class="hero-carousel">
+  <section class="hero-glass">
+  <!-- AÑADE ESTO AQUÍ: -->
+  <div class="glass-sphere sphere-large top-right"></div>
+  <div class="glass-sphere sphere-medium bottom-left"></div>
+  <div class="glass-sphere sphere-small top-left"></div>
+  <div class="glass-ring ring-large top-left"></div>
+  <div class="glass-ring ring-medium bottom-right"></div>
+  <!-- Fin de las formas -->
+
+  <div class="hero-content-glass">
+    <!-- ... todo el contenido del hero ... -->
+  </div>
+</section>
+
   <div class="carousel-container" id="carousel-track">
     <!-- Cards del carrusel - Mejores diseños web premium -->
     <div class="carousel-slide" data-index="0" style="background-image: url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=1200&q=90');"></div>
