Change button text from 'Get Started' to 'Acceder'

--- a/index.html
+++ b/index.html
@@ -1664,7 +1664,7 @@ body {
       Plantillas premium creadas con criterio de producto.
       Claridad, foco y decisiones bien tomadas desde el inicio.
     </p>
-        <a href="#" class="btn-glass">Get Started</a>
+        <a href="#" class="btn-glass">Acceder</a>
     </div>
   </div>
 </section>
