--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@ body {
     .faq { padding: 100px 40px; background: #fff; }
     .faq-container { max-width: 800px; margin: 0 auto; }
     details { margin-bottom: 16px; }
-    details summary { cursor: pointer; padding: 24px; background: #f9f9f9; border: 1px solid #e5e5e5; border-radius: 8px; font-weight: 600; font-size: 1rem; display: flex; justify-content: space-between; align-items: center; user-select: none; transition: all 0.3s; }
+    details summary { cursor: pointer; padding: 24px; background: #f339f9; border: 1px solid #e5e9e5; border-radius: 8px; font-weight: 600; font-size: 1rem; display: flex; justify-content: space-between; align-items: center; user-select: none; transition: all 0.3s; }
     details summary:hover { background: #fff; border-color: #000; }
     details summary::after { content: '+'; font-weight: bold; font-size: 1.5rem; }
     details[open] summary::after { content: '-'; }
