Enhance navigation with dropdown for 'Servicios'
Added a dropdown menu for 'Servicios' with various design service links.

--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,18 @@
         <span class="orange">Neo</span><span class="black">ProdUx</span>
       </a>
       <div class="nav-links">
-        <a href="#servicios">Servicios</a>
+        <div style="display: flex; gap: 40px; align-items: center;">
+      <div class="nav-dropdown">
+        <a href="#servicios" class="dropdown-trigger">Servicios</a>
+        <div class="dropdown-menu">
+          <a href="ui-ux-design.html">Diseño UI-UX</a>
+          <a href="mobile-app-design.html">Diseño de aplicaciones móviles</a>
+          <a href="website-design.html">Diseño de sitios web</a>
+          <a href="figma-to-wordpress.html">Figma a WordPress</a>
+          <a href="figma-to-html.html">Figma a HTML</a>
+          <a href="figma-to-webflow.html">Figma a Webflow</a>
+          <a href="ejemplos-amazon.html">Ejemplos Amazon</a>
+        </div>
         <span class="nav-separator">|</span>
         <a href="#proyectos">Trabajos</a>
         <span class="nav-separator">|</span>
