--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,7 @@
         <span class="orange">Neo</span><span class="black">ProdUx</span>
       </a>
       <div class="nav-links">
-        <div style="display: flex; gap: 40px; align-items: center;">
+        <<div style="display: flex; gap: 40px; align-items: center;">
       <div class="nav-dropdown">
         <a href="#servicios" class="dropdown-trigger">Servicios</a>
         <div class="dropdown-menu">
@@ -1269,6 +1269,7 @@
           <a href="figma-to-html.html">Figma a HTML</a>
           <a href="figma-to-webflow.html">Figma a Webflow</a>
           <a href="ejemplos-amazon.html">Ejemplos Amazon</a>
+        </div>
         </div>
         <span class="nav-separator">|</span>
         <a href="#proyectos">Trabajos</a>
