--- a/index.html
+++ b/index.html
@@ -1369,12 +1369,12 @@
 <div class="hero-carousel">
   <div class="carousel-container" id="carousel-track">
     <!-- Cards del carrusel - Mejores diseños web premium -->
-    <div class="carousel-slide" data-index="0" style="background-image: url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=1200&q=90');"></div>
-    <div class="carousel-slide" data-index="1" style="background-image: url('https://images.unsplash.com/photo-1551650975-87deedd944c3?auto=format&fit=crop&w=1200&q=90');"></div>
-    <div class="carousel-slide" data-index="2" style="background-image: url('https://images.unsplash.com/photo-1555421689-d68471e189f2?auto=format&fit=crop&w=1200&q=90');"></div>
-    <div class="carousel-slide" data-index="3" style="background-image: url('https://images.unsplash.com/photo-1547658719-da2b51169166?auto=format&fit=crop&w=1200&q=90');"></div>
-    <div class="carousel-slide" data-index="4" style="background-image: url('https://images.unsplash.com/photo-1551434678-e076c223a692?auto=format&fit=crop&w=1200&q=90');"></div>
-    <div class="carousel-slide" data-index="5" style="background-image: url('https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?auto=format&fit=crop&w=1200&q=90');"></div>
+    <div class="carousel-slide" data-index="0" style="background-image: url('images/Desktop - 1.png');"></div>
+    <div class="carousel-slide" data-index="1" style="background-image: url('images/Desktop - 2.png');"></div>
+    <div class="carousel-slide" data-index="2" style="background-image: url('images/Desktop - 33.png');"></div>
+    <div class="carousel-slide" data-index="3" style="background-image: url('images/Desktop - 4.png');"></div>
+    <div class="carousel-slide" data-index="4" style="background-image: url('images/Desktop - 5.png');"></div>
+    <div class="carousel-slide" data-index="5" style="background-image: url('images/Desktop - 6.png');"></div>
   </div>
   
   <!-- Indicadores de navegación -->
