Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,7 @@
 
       <div class="case-visual">
         <img 
-          src="app para paseadores de perros (20)/Reserva · Fecha y hora-guarderia.png" 
+          src="Desktop - 1paseo.png" 
           alt="Dashboard FinTech rediseñado"
           class="case-image"
         >
